# conway-gol

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/main/: main.cpp
src/test/: pattern_test.cpp
